# Oat-Auth-Template

./: CMakeLists.txt  Dockerfile  README.md
include/controllers/: AuthController.hpp  NewsController.hpp  PersonController.hpp
include/db/: Database.hpp
include/models/: AnalyzeNewsDto.hpp  Models.hpp  NewsDto.hpp  UserDto.hpp
include/repositories/: NewsRepository.hpp  UserRepository.hpp
schema/: init.sql
src/: main.cpp
src/controllers/: AuthController.cpp  NewsController.cpp  PersonController.cpp
src/db/: Database.cpp
src/models/: Models.cpp
src/repositories/: NewsRepository.cpp  UserRepository.cpp
